--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h1>This is the show view for Categories</h1>
   <div>    
-    <p>Associated Titles: <% @category.articles.each do |article| %>
+    <p>Associated Titles: <% @category.articles.order(:title).each do |article| %>
       <li><%= link_to article.title, article %></li>
       <% end %>
     </p>    
