--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
 <h1>Welcome to Wikiful</h1>
-<p>This is a placeholder for our landing page.  Eventually we'll put something cooler here!</p>
+<p>Here are some recent articles!!!</p>
+<% @recent_articles.each do |ra| %>
+  <div>
+    <p>Title: <%= ra.title %></p>
+    <p>Published: <%= ra.created_at.strftime('%b, %d, %Y') %></p>
+    <p>Categories: <% ra.categories.each do |category| %>
+      <li><%= category.name %></li>
+      <% end %>
+    </p>
+    <p><%= truncate(ra.content, length: 100) %></p>
+  </div>
+<% end %>
