--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/bootstrap";
 body { padding-top: 60px; }
+.container { color:red; background-color:black; }
 
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
