--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,29 +1,38 @@
-<%= form_for @article do |f| %>
-  <div class="control-group">
-    <%= f.label :title %>
-    <div class="controls">
-      <%= f.text_field :title %>
+<%= form_for @article, :html => { :class => "form-horizontal article" } do |f| %>
+
+    <% if @article.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @article.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
-</div>
-<div class="control-group">
-  <%= f.label :content %>
-  <div class="controls">
-    <%= f.text_area :content, rows: "20", cols: "100" %>
-  </div>
-</div>
-
-<div class="category-control">
-  <%= f.label 'File under at least one category' %>
-  <% Category.all.order(name: :asc).each do |category| %>
-  <div>
-    <%= check_box_tag "article[category_ids][]", category.id %>
-    <%= category.name %>
-  </div>
   <% end %>
-</div>
 
-<div class="form-actions">
-  <%= f.submit nil %>
-  <%= link_to 'Cancel', articles_path %>
-</div>
+  <div class="control-group">
+    <%= f.label :title, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :title, :class => 'form-control' %>
+    </div>
+    <%= error_span(@article[:title]) %>
+  </div>
+  <div class="control-group">
+    <%= f.label :content, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :content, :class => 'form-control' %>
+    </div>
+    <%= error_span(@article[:content]) %>
+  </div>
+
+
+  <%= f.submit nil, :class => 'btn btn-primary' %>
+  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+            articles_path, :class => 'btn btn-default' %>
+
 <% end %>
