Correcting the application.html.erb layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top">
  <div class="navbar-inner">
    <div class="container">
      <%= link_to "Wikiful", root_path, :class => "brand" %>
@@ -21,8 +21,8 @@
 </div>
   <div class="container">
     <div class="row">
-      <div class="span9"><%= yield %></div>      
-        <div class="span3 sidebar">
+      <div class="col-md-9"><%= yield %></div>      
+        <div class="col-md-3 sidebar">
           <div class="my-wiki-site">
             <h4>My Wikiful</h4>
               <ul>
@@ -43,6 +43,6 @@
           </div>
       </div>
     </div>
-  </div>  
+  </div>    
 </body>
 </html>
