--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,13 @@
                 <li><%= link_to "Write a Wiki", new_article_path %></li>
               </ul>
           </div>
+          <div class="row">
+            <div class="col-md-4">
+              <% flash.each do |name, msg| %>
+                <%= content_tag :div, msg, id: "flash_#{name}" %>
+              <% end %>
+            </div>
+          </div>
           <div class="categories-sidebar">
             <h4>Categories</h4>
               <ul>
