--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,27 @@
  <div class="navbar-inner">
    <div class="container">
      <%= link_to "Wikiful", root_path, :class => "brand" %>
-     <div style="float: right;">Eventually log in/out and sign up links will go here</div>
+     <div class='session-controls'> 
+      <% if current_user %>
+        <%= link_to "Log Out", logout_path, :class => 'btn btn-primary btn-mini' %>
+        Logged in as <%= current_user.email %>.
+      <% else %>
+        <div class="btn-group">
+          <%= link_to "Sign Up", signup_path, :class => "btn btn-mini" %>
+          <%= link_to "Log In", login_path, :class => "btn btn-mini" %>
+        </div>
+      <% end %>
+    </div>
    </div>
  </div>
-</div>
+ </div>
+   <div class="row">
+     <div class="col-md-4">
+       <% flash.each do |name, msg| %>
+          <%= content_tag :div, msg, id: "flash_#{name}" %>
+       <% end %>
+     </div>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-9"><%= yield %></div>      
@@ -29,13 +46,7 @@
                 <li><%= link_to "Write a Wiki", new_article_path %></li>
               </ul>
           </div>
-          <div class="row">
-            <div class="col-md-4">
-              <% flash.each do |name, msg| %>
-                <%= content_tag :div, msg, id: "flash_#{name}" %>
-              <% end %>
-            </div>
-          </div>
+          
           <div class="categories-sidebar">
             <h4>Categories</h4>
               <ul>
@@ -53,3 +64,7 @@
   </div>    
 </body>
 </html>
+
+
+
+
